// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoyaltyBanner View Component earnedReward isGuest should render correctly 1`] = `
<div
  className=""
>
  <div
    className="loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyalty-banner-section-wrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        currentSubtotal={21}
        descriptionLabel={false}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={false}
        isAddedToBagPage={false}
        isConfirmationPage={false}
        isPlcc={true}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        remainingPlcc={false}
        showSubtotal={false}
        subHeadingLabel={false}
      />
      <div
        className="footer"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          earnedReward={true}
          isAddedToBagPage={false}
          isConfirmationPage={false}
          isGuest={false}
          isPlcc={true}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component earnedReward should render correctly 1`] = `
<div
  className=""
>
  <div
    className="loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyalty-banner-section-wrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        currentSubtotal={21}
        descriptionLabel={false}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={false}
        isAddedToBagPage={false}
        isConfirmationPage={false}
        isPlcc={true}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        remainingPlcc={false}
        showSubtotal={false}
        subHeadingLabel={false}
      />
      <div
        className="footer"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          earnedReward={true}
          isAddedToBagPage={false}
          isConfirmationPage={false}
          isGuest={false}
          isPlcc={true}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isGuest isPlcc should render correctly 1`] = `
<div
  className=""
>
  <div
    className="loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyalty-banner-section-wrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        currentSubtotal={21}
        descriptionLabel={false}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={false}
        isAddedToBagPage={false}
        isConfirmationPage={false}
        isPlcc={false}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        remainingPlcc={false}
        showSubtotal={true}
        subHeadingLabel={false}
      />
      <div
        className="footer"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          earnedReward={true}
          isAddedToBagPage={false}
          isConfirmationPage={false}
          isGuest={false}
          isPlcc={false}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isGuest should render correctly 1`] = `
<div
  className=""
>
  <div
    className="loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyalty-banner-section-wrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        currentSubtotal={21}
        descriptionLabel={false}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={false}
        isAddedToBagPage={false}
        isConfirmationPage={false}
        isPlcc={true}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        remainingPlcc={false}
        showSubtotal={false}
        subHeadingLabel={false}
      />
      <div
        className="footer"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          earnedReward={true}
          isAddedToBagPage={false}
          isConfirmationPage={false}
          isGuest={true}
          isPlcc={true}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component isPlcc should render correctly 1`] = `
<div
  className=""
>
  <div
    className="loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyalty-banner-section-wrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        currentSubtotal={21}
        descriptionLabel={false}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={false}
        isAddedToBagPage={false}
        isConfirmationPage={false}
        isPlcc={false}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        remainingPlcc={false}
        showSubtotal={true}
        subHeadingLabel={false}
      />
      <div
        className="footer"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          earnedReward={true}
          isAddedToBagPage={false}
          isConfirmationPage={false}
          isGuest={false}
          isPlcc={false}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;

exports[`LoyaltyBanner View Component not isPlcc should render correctly 1`] = `
<div
  className=""
>
  <div
    className="loyalty-banner-wrapper"
  >
    <Styled(BodyCopy)
      className="loyalty-banner-section-wrapper"
      color="text.primary"
      component="div"
      fontFamily="secondary"
      fontSize={12}
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="left"
    >
      <Styled(GuestMprPlccSection)
        currentSubtotal={21}
        descriptionLabel={false}
        estimatedSubtotal={33}
        getCurrencySymbol=""
        headingLabel={false}
        isAddedToBagPage={false}
        isConfirmationPage={false}
        isPlcc={false}
        isProductDetailView=""
        isReviewPage={false}
        labels={Object {}}
        remainingPlcc={false}
        showSubtotal={true}
        subHeadingLabel={false}
      />
      <div
        className="footer"
      >
        <Styled(LoyaltyFooterSection)
          className=""
          earnedReward={true}
          isAddedToBagPage={false}
          isConfirmationPage={false}
          isGuest={true}
          isPlcc={false}
          isProductDetailView=""
          isReviewPage={false}
          labels={Object {}}
        />
      </div>
    </Styled(BodyCopy)>
  </div>
</div>
`;
